--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
     "name": "ts_mongo_scaffolding",
     "version": "1.0.0",
-    "main": "src/app.js",
+    "main": "src/index.js",
     "repository": "git@github.com:YuPototo/node_ts_mongo_scaffolding.git",
     "author": "Yu Qin <sirius.qinyu@gmail.com>",
     "license": "MIT",
     "scripts": {
         "build": "tsc",
-        "start": "ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./dist/app.js",
-        "dev": "ENV_FILE=./config/.env.dev ts-node-dev -r tsconfig-paths/register --respawn --transpile-only ./src/app.ts"
+        "start": "ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./dist/index.js",
+        "dev": "ENV_FILE=./config/.env.dev ts-node-dev -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts"
     },
     "dependencies": {
         "@types/dotenv-parse-variables": "^2.0.1",
         "dotenv-extended": "^2.9.0",
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.1",
+        "mongoose": "^5.13.3",
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
         "tsconfig-paths": "^3.10.1",
@@ -25,6 +26,7 @@
         "@types/express": "^4.17.13",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.4.0",
+        "mongodb-memory-server": "^7.3.1",
         "ts-node-dev": "^1.1.8"
     }
 }
