--- a/package.json
+++ b/package.json
@@ -8,25 +8,38 @@
     "scripts": {
         "build": "tsc",
         "start": "ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./dist/index.js",
-        "dev": "ENV_FILE=./config/.env.dev ts-node-dev -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts"
+        "dev": "ENV_FILE=./config/.env.dev ts-node-dev -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
+        "test": "ENV_FILE=./config/.env.test jest"
     },
     "dependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/dotenv-parse-variables": "^2.0.1",
+        "@types/jsonwebtoken": "^8.5.4",
+        "bcrypt": "^5.0.1",
         "dotenv-extended": "^2.9.0",
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.3",
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
         "tsconfig-paths": "^3.10.1",
         "typescript": "^4.3.5",
+        "validator": "^13.6.0",
         "winston": "^3.3.3"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
+        "@types/faker": "^5.5.7",
+        "@types/jest": "^26.0.24",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.4.0",
+        "@types/supertest": "^2.0.11",
+        "faker": "^5.5.3",
+        "jest": "^27.0.6",
         "mongodb-memory-server": "^7.3.1",
+        "supertest": "^6.1.4",
+        "ts-jest": "^27.0.4",
         "ts-node-dev": "^1.1.8"
     }
 }
